--- a/app/globals.css
+++ b/app/globals.css
@@ -57,3 +57,16 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* To remove default spinner from input fields */
+@layer components {
+  .no-spinner {
+    -moz-appearance: textfield;
+  }
+
+  .no-spinner::-webkit-outer-spin-button,
+  .no-spinner::-webkit-inner-spin-button {
+    margin: 0;
+    -webkit-appearance: none;
+  }
+}
