chore: add Mona Sans font and update CSS styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Mona Sans";
+  src: url("../public/fonts/Mona-Sans.woff2")
+      format("woff2 supports variations"),
+    url("../public/fonts/Mona-Sans.woff2") format("woff2-variations");
+  font-weight: 200 900;
+  font-stretch: 75% 125%;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -60,6 +69,10 @@
 
 /* To remove default spinner from input fields */
 @layer components {
+  .font-mona-sans {
+    font-family: "Mona Sans", sans-serif;
+  }
+
   .no-spinner {
     -moz-appearance: textfield;
   }
