feat: update landing page

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.cdnfonts.com/css/mona-sans");
 
 @font-face {
   font-family: "Mona Sans";
@@ -13,48 +14,48 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 240 5.9% 10%;
+    --background: 258 100% 95%;
+    --foreground: 258 5% 0%;
+    --card: 258 50% 90%;
+    --card-foreground: 258 5% 10%;
+    --popover: 258 100% 95%;
+    --popover-foreground: 258 100% 0%;
+    --primary: 258 52.3% 46.9%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 258 30% 70%;
+    --secondary-foreground: 0 0% 0%;
+    --muted: 220 30% 85%;
+    --muted-foreground: 258 5% 35%;
+    --accent: 220 30% 80%;
+    --accent-foreground: 258 5% 10%;
+    --destructive: 0 100% 30%;
+    --destructive-foreground: 258 5% 90%;
+    --border: 258 30% 50%;
+    --input: 258 30% 18%;
+    --ring: 258 52.3% 46.9%;
     --radius: 0.5rem;
   }
-
   .dark {
-    --background: 240 10% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 240 10% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 240 10% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 240 5.9% 10%;
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 240 3.7% 15.9%;
-    --muted-foreground: 240 5% 64.9%;
-    --accent: 240 3.7% 15.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
-    --ring: 240 4.9% 83.9%;
+    --background: 249, 19%, 7%;
+    --foreground: 258 5% 90%;
+    --card: 258 50% 0%;
+    --card-foreground: 258 5% 90%;
+    --popover: 258 50% 5%;
+    --popover-foreground: 258 5% 90%;
+    --primary: 258 52.3% 46.9%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 258 30% 10%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: 220 30% 15%;
+    --muted-foreground: 258 5% 60%;
+    --accent: 220 30% 15%;
+    --accent-foreground: 258 5% 90%;
+    --destructive: 0 100% 30%;
+    --destructive-foreground: 258 5% 90%;
+    --border: 258 30% 18%;
+    --input: 258 30% 18%;
+    --ring: 258 52.3% 46.9%;
+    --radius: 0.5rem;
   }
 }
 
@@ -70,6 +71,7 @@
 /* To remove default spinner from input fields */
 @layer components {
   .font-mona-sans {
+    font-family: "Mona-Sans", sans-serif;
     font-family: "Mona Sans", sans-serif;
   }
 
@@ -82,6 +84,10 @@
     margin: 0;
     -webkit-appearance: none;
   }
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body::-webkit-scrollbar {
